--- a/create vijay.html
+++ b/create vijay.html
@@ -10,3 +10,5 @@
   time and is amongst the highest paid actors in India. He has won several awards as an actor. Referred to as
   "Thalapathy" (transl.commander), Vijay has a significant fan following.
 </p>
+
+<p> location: neelakarai</p>
